--- a/aph/angular.json
+++ b/aph/angular.json
@@ -3,21 +3,17 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "aph": {
+    "portafolio": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
       "prefix": "app",
-      "schematics": {
-        "@schematics/angular:component": {
-          "style": "less"
-        }
-      },
+      "schematics": {},
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/aph",
+            "outputPath": "dist/portafolio",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -27,7 +23,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles.css"
             ],
             "scripts": []
           },
@@ -47,32 +43,25 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                }
-              ]
+              "buildOptimizer": true
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "aph:build"
+            "browserTarget": "portafolio:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "aph:build:production"
+              "browserTarget": "portafolio:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "aph:build"
+            "browserTarget": "portafolio:build"
           }
         },
         "test": {
@@ -83,7 +72,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.less"
+              "src/styles.css"
             ],
             "scripts": [],
             "assets": [
@@ -106,20 +95,19 @@
         }
       }
     },
-    "aph-e2e": {
+    "portafolio-e2e": {
       "root": "e2e/",
       "projectType": "application",
-      "prefix": "",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "aph:serve"
+            "devServerTarget": "portafolio:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "aph:serve:production"
+              "devServerTarget": "portafolio:serve:production"
             }
           }
         },
@@ -135,5 +123,5 @@
       }
     }
   },
-  "defaultProject": "aph"
+  "defaultProject": "portafolio"
 }
